[gd_scene load_steps=12 format=3 uid="uid://bto2fiy002i8a"]

[ext_resource type="Texture2D" uid="uid://dhyab4ryoq7aq" path="res://Game/assets/Menu/MenuPicture/MainMenu.png" id="1_oqkyx"]
[ext_resource type="Script" path="res://Game/Interfaces/option_menu.gd" id="1_ufnyb"]
[ext_resource type="Texture2D" uid="uid://be2iywf0a03f0" path="res://Game/assets/Menu/Buttons/PNG/CGB02-blue_M_btn.png" id="3_45qn4"]
[ext_resource type="AudioStream" uid="uid://by375dppuhwy" path="res://Game/assets/Menu/Music/AdhesiveWombat - Night Shade NO COPYRIGHT 8-bit Music.mp3" id="4_hadmb"]
[ext_resource type="AudioStream" uid="uid://dtjp57oed87s" path="res://Game/assets/Menu/SFX/Jump.wav" id="5_hjjh4"]
[ext_resource type="Texture2D" uid="uid://di4e3rtmwoumu" path="res://Game/assets/Menu/Buttons/PNG/CGB02-blue_L_btn_bis.png" id="6_6tr1i"]

[sub_resource type="SystemFont" id="SystemFont_34t2d"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_satah"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_k5mxm"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_cq2jf"]
font_names = PackedStringArray("Impact")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v3kmm"]

[node name="Option" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ufnyb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1008.0
offset_bottom = 567.0
texture = ExtResource("1_oqkyx")
expand_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 451.0
offset_top = 114.0
offset_right = 569.0
offset_bottom = 166.0

[node name="Label" type="Label" parent="TextureRect/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_34t2d")
text = "Screen settings"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_satah")
text = "Fullscreen"

[node name="fullscreen" type="CheckButton" parent="TextureRect/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 451.0
offset_top = 214.0
offset_right = 593.0
offset_bottom = 268.0

[node name="HBoxContainer2" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_k5mxm")
text = "Music"

[node name="Sound" type="CheckButton" parent="TextureRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
button_pressed = true

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_direction = 1
layout_mode = 2
auto_translate = false
localize_numeral_system = false

[node name="HSlider" type="HSlider" parent="TextureRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 0.8
max_value = 1.0
step = 0.001
value = 1.0

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 451.0
offset_top = 290.0
offset_right = 593.0
offset_bottom = 344.0

[node name="HBoxContainer2" type="HBoxContainer" parent="TextureRect/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/VBoxContainer3/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_k5mxm")
text = "SFX"

[node name="SFX" type="CheckButton" parent="TextureRect/VBoxContainer3/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer3"]
layout_direction = 1
layout_mode = 2
auto_translate = false
localize_numeral_system = false

[node name="SFXSlider" type="HSlider" parent="TextureRect/VBoxContainer3/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="TextureRect/VBoxContainer3/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 451.0
offset_top = 350.0
offset_right = 678.0
offset_bottom = 438.0

[node name="Label" type="Label" parent="TextureRect/VBoxContainer4"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_34t2d")
text = "Server IP"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/VBoxContainer4/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_satah")
text = "(leave blank for default server) : "

[node name="HBoxContainer2" type="HBoxContainer" parent="TextureRect/VBoxContainer4"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="TextureRect/VBoxContainer4/HBoxContainer2"]
custom_minimum_size = Vector2(135, 38)
layout_mode = 2
placeholder_text = "sly.uglu.ch"

[node name="Quit" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 436.0
offset_top = 446.0
offset_right = 572.0
offset_bottom = 524.0
theme_override_fonts/font = SubResource("SystemFont_cq2jf")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_v3kmm")
action_mode = 0
text = "BACK"
icon = ExtResource("3_45qn4")
flat = true
icon_alignment = 1

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-19, 14)
stream = ExtResource("4_hadmb")
bus = &"Music"

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-19, 14)
stream = ExtResource("5_hjjh4")
volume_db = -7.0
bus = &"SFX"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 862.0
offset_top = 14.0
offset_right = 998.0
offset_bottom = 57.0
text = "Launch server"
icon = ExtResource("6_6tr1i")
flat = true
icon_alignment = 1

[connection signal="toggled" from="TextureRect/VBoxContainer2/HBoxContainer/fullscreen" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="TextureRect/VBoxContainer/HBoxContainer2/Sound" to="." method="_on_sound_toggled"]
[connection signal="value_changed" from="TextureRect/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="TextureRect/VBoxContainer3/HBoxContainer2/SFX" to="." method="_on_sfx_toggled"]
[connection signal="drag_ended" from="TextureRect/VBoxContainer3/HBoxContainer/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="TextureRect/VBoxContainer3/HBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="text_changed" from="TextureRect/VBoxContainer4/HBoxContainer2/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="TextureRect/Quit" to="." method="_on_quit_pressed"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
